@@ -128,35 +128,35 @@ dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     flux in x direction
 data:          model%velocity%uflx(1:ewnv,1:nsnv)
-factor:        f2
+factor:        scale2d_f2
 
 [vflx]
 dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     flux in x direction
 data:          model%velocity%vflx(1:ewnv,1:nsnv)
-factor:        f2
+factor:        scale2d_f2
 
 [diffu]
 dimensions:    time, y0, x0
 units:         meter2/year
 long_name:     apparent diffusivity
 data:          model%velocity%diffu(1:ewnv,1:nsnv)
-factor:        f4
+factor:        scale2d_f4
 
 [btrc]
 dimensions:    time, y0, x0
 units:         meter/pascal/year
 long_name:     basal slip coefficient
 data:          model%velocity%btrc(1:ewnv,1:nsnv)
-factor:        f6
+factor:        scale2d_f6
 
 [ubas]
 dimensions:    time, y0, x0
 units:         meter/year
 long_name:     basal slip velocity in x direction
 data:          model%velocity%ubas(1:ewnv,1:nsnv)
-factor:        f5
+factor:        scale2d_f5
 standard_name: land_ice_basal_x_velocity
 
 [vbas]
@@ -164,7 +164,7 @@ dimensions:    time, y0, x0
 units:         meter/year
 long_name:     basal slip velocity in y direction
 data:          model%velocity%vbas(1:ewnv,1:nsnv)
-factor:        f5
+factor:        scale2d_f5
 standard_name: land_ice_basal_y_velocity
 
 [thk]
@@ -206,7 +206,7 @@ dimensions:    time, y1, x1
 units:         meter/year
 long_name:     accumulation, ablation rate
 data:          model%climate%acab
-factor:        f1
+factor:        scale2d_f1
 standard_name: land_ice_surface_mass_balance
 
 [bmlt]
@@ -214,7 +214,7 @@ dimensions:    time, y1, x1
 units:         meter/year
 long_name:     basal melt rate
 data:          model%temper%bmlt
-factor:        f1
+factor:        scale2d_f1
 standard_name: land_ice_basal_melt_rate
 hot:           1
 
@@ -252,7 +252,7 @@ dimensions:    time, y1, x1
 units:         meter/year
 long_name:     precipitation
 data:          climate%prcp
-factor:        f1
+factor:        scale2d_f1
 standard_name: lwe_precipitation_rate
 f90file:       glint_io.f90
 
@@ -261,7 +261,7 @@ dimensions:    time, y1, x1
 units:         meter/year
 long_name:     ablation
 data:          climate%ablt
-factor:        f1
+factor:        scale2d_f1
 f90file:       glint_io.f90
 
 [dusrfdtm]
@@ -269,14 +269,14 @@ dimensions:    time, y1, x1
 units:         meter/year
 long_name:     rate of upper ice surface elevation change
 data:          model%geomderv%dusrfdtm
-factor:        f1
+factor:        scale2d_f1
 
 [uvel]
 dimensions:    time, level, y0, x0
 units:         meter/year
 long_name:     ice velocity in x direction
 data:          model%velocity%uvel(up,1:ewnv,1:nsnv)
-factor:        f1
+factor:        scale3d_f1
 standard_name: land_ice_x_velocity
 
 [vvel]
@@ -284,7 +284,7 @@ dimensions:    time, level, y0, x0
 units:         meter/year
 long_name:     ice velocity in y direction
 data:          model%velocity%vvel(up,1:ewnv,1:nsnv)
-factor:        f1
+factor:        scale3d_f1
 standard_name: land_ice_y_velocity
 
 [wvel]
@@ -292,7 +292,7 @@ dimensions:    time, level, y1, x1
 units:         meter/year
 long_name:     vertical ice velocity
 data:          model%velocity%wvel(up,:,:)
-factor:        f3/tim0
+factor:        scale3d_f7
 standard_name: land_ice_z_velocity
 
 [wgrd]
@@ -300,14 +300,14 @@ dimensions:    time, level, y1, x1
 units:         meter/year
 long_name:     ?? some velo ??
 data:          model%velocity%wgrd(up,:,:)
-factor:        f3/tim0
+factor:        scale3d_f7
 
 [flwa]
 dimensions:    time, level, y1, x1
-units:         ??
-long_name:     ??
+units:         Pascal/year
+long_name:     Pre-exponential flow law parameter
 data:          model%temper%flwa(up,:,:)
-factor:        vis0*scyr
+factor:        scale3d_f8
 hot:           1
 
 [temp]
